# csgsi-rust

./: .gitignore  Cargo.toml
src/: lib.rs  utils.rs
tests/: digest.rs
tests/fixtures/: sample.json
